--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
-	<img src="rendangtelur.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
+	<img src="rendangtelur.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 "style="background-color: transparent;">
 	<div style="background-color: transparent;"  class="flex flex-col justify-between p-6 space-y-8">
 		<div style="background-color: transparent;" class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Telur</h2>
@@ -331,7 +331,7 @@
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
-	<img src="ayam.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
+	<img src="ayam.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 "style="background-color: transparent;">
 	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
 		<div style="background-color: transparent;" class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Ayam</h2>
@@ -347,7 +347,7 @@
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
-	<img src="kambing.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
+	<img src="kambing.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 "style="background-color: transparent;">
 	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
 		<div style="background-color: transparent;" class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Kambing</h2>
@@ -364,7 +364,7 @@
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
 <div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
-	<img src="sapi.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
+	<img src="sapi.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 "style="background-color: transparent;">
 	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
 		<div style="background-color: transparent;" class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Sapi</h2>
@@ -378,10 +378,10 @@
 							</div>
 						</div>
 						<div class="item" >
-							<div class="testi_item"style="background-color: transparent; border:none; ">
+							<div class="testi_item"style="background-color: #222222; border:none; ">
 								<div class="container justify-center-around">
-<div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
-	<img src="pakis.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 dark:bg-gray-500">
+<div style="background-color: transparent;"  class="max-w-xs rounded-md shadow-md dark:text-gray-100">
+	<img src="pakis.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 " style="background-color: transparent;">
 	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
 		<div style="background-color: transparent;"  class="space-y-2">
 			<h2 class="text-3xl font-semibold tracking-wide">Rendang Pakis</h2>
