--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 						<div class="item" >
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
-<div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
+<div style="background-color: transparent;" class="max-w-xs rounded-md shadow-md dark:text-gray-100">
 	<img src="rendangtelur.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 "style="background-color: transparent;">
 	<div style="background-color: transparent;"  class="flex flex-col justify-between p-6 space-y-8">
 		<div style="background-color: transparent;" class="space-y-2">
@@ -330,7 +330,7 @@
 						<div class="item" >
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
-<div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
+<div style="background-color: transparent;" class="max-w-xs rounded-md shadow-md  dark:text-gray-100">
 	<img src="ayam.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 "style="background-color: transparent;">
 	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
 		<div style="background-color: transparent;" class="space-y-2">
@@ -346,7 +346,7 @@
 						<div class="item" >
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
-<div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
+<div style="background-color: transparent;" class="max-w-xs rounded-md shadow-md dark:text-gray-100">
 	<img src="kambing.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 "style="background-color: transparent;">
 	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
 		<div style="background-color: transparent;" class="space-y-2">
@@ -363,7 +363,7 @@
 						<div class="item" >
 							<div class="testi_item"style="background-color: transparent; border:none; ">
 								<div class="container justify-center-around">
-<div class="max-w-xs rounded-md shadow-md dark:bg-gray-900 dark:text-gray-100">
+<div style="background-color: transparent;"  class="max-w-xs rounded-md shadow-md dark:text-gray-100">
 	<img src="sapi.jpg" alt="" class="object-cover object-center w-full rounded-t-md h-72 "style="background-color: transparent;">
 	<div style="background-color: transparent;" class="flex flex-col justify-between p-6 space-y-8">
 		<div style="background-color: transparent;" class="space-y-2">
