--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!--================End Home Banner Area =================-->
         <section id="darkmode" style="margin-top: -200px;" class="p-4 lg:p-8  dark:text-gray-100" style="background-color:#222222;">
 	<div class="container style="background-color:#222222;" mx-auto space-y-12" id="darkmode">
-				<h1 class="text-4xl font-bold leading-none mb-10 text-center sm:text-5xl" style="margin-top: 250px;">Rendang</h1>
+				<h1 class="text-4xl font-bold leading-none mb-10 text-center sm:text-5xl" style="margin-top: 250px;font-family: teko;">Rendang</h1>
 		<div id="darkmode" class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row"id="darkmode" style="background-color:transparent;" >
 			<img id="darkmode" src="rendang3.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
 			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6"  style="background-color:transparent;" >
@@ -122,6 +122,24 @@
 				<span class="text-xs uppercase dark:text-gray-400">Rendang 🥩</span>
 				<h3 class="text-3xl font-bold">Rendang terbuat dari apa?</h3>
 				<p class="my-6 dark:text-gray-400">Selain bahan dasar daging, rendang mempergunakan santan kelapa (karambia), dan campuran dari berbagai bumbu khas yang dihaluskan di selangnya cabai (lado), serai, lengkuas, kunyit, jahe, bawang putih, bawang merah dan aneka bumbu lainnya yang pada umumnya dikata untuk pemasak</p>
+				<button type="button" class="self-start"></button>
+			</div>
+		</div>
+		<div id="darkmode" class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row"id="darkmode" style="background-color:transparent;" >
+			<img id="darkmode" src="rendang3.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
+			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6"  style="background-color:transparent;" >
+				<span class="text-xs uppercase dark:text-gray-400">Rendang 🥩</span>
+				<h3 class="text-3xl font-bold">Sejarah Singkat dari Rendang</h3>
+				<p class="my-6 dark:text-gray-400">Rendang merupakan sajian makanan dari ranah Minang, Sumatera Barat. Menurut sejarah, nama "rendang" berasal dari bahasa Minang, yaitu randang.  Kata randang merujuk pada teknik memasak bernama marandang, yang berarti mengolah dan mengaduk masakan dalam waktu yang lama sehingga hasil masakan menjadi kering. Terciptanya kuliner rendang berasal dari hasil akulturasi budaya yang masuk ke Minang. Salah satu kuliner yang sejenis dengan hidangan rendang yaitu kuliner kari dari India.</p>
+				<button type="button" class="self-start"></button>
+			</div>
+		</div>
+		<div id="darkmode" class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row-reverse"id="darkmode"style="background-color:transparent;">
+			<img id="darkmode" src="rendang2.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
+			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6"  style="background-color:transparent;">
+				<span class="text-xs uppercase dark:text-gray-400">Rendang 🥩</span>
+				<h3 class="text-3xl font-bold">Sejak Kapan Masakan Rendang ada?</h3>
+				<p class="my-6 dark:text-gray-400">Rendang juga disebut dalam kesusastraan Melayu klasik seperti Hikayat Amir Hamzah yang membuktikan bahwa rendang sudah dikenal dalam seni masakan Melayu sejak 1550-an (pertengahan abad ke-16).</p>
 				<button type="button" class="self-start"></button>
 			</div>
 		</div>
@@ -481,13 +499,13 @@
 		</div>
 	</div>
 			</div>
-			<div class="flex flex-col items-center max-w-lg mx-12 lg:mx-0">
-				<div class="relative text-center" id="darkmode" style="background-color: transparent;">
+			<div class="flex flex-col items-center max-w-lg mx-12 lg:mx-0"  style="background-color: transparent;display:flex;align-items: center;justify-content: center;height: 100%;" >
+				<div class="relative text-center" id="darkmode" style="background-color: transparent;display:flex;align-items: center;justify-content: center;height: 100%;">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="deepskyblue" class="absolute top-0 left-0 w-8 h-8 text-gray-700">
 						<path d="M232,246.857V16H16V416H54.4ZM48,48H200V233.143L48,377.905Z"></path>
 						<path d="M280,416h38.4L496,246.857V16H280ZM312,48H464V233.143L312,377.905Z"></path>
 					</svg>
-					<p class="px-6 py-1 text-lg italic">
+					<p class="px-6 py-1 text-lg italic" >
 						The only way to do great work is to love what you do. If you haven’t found it yet, keep looking. Don’t settle.”</p>
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="deepskyblue" class="absolute bottom-0 right-0 w-8 h-8 text-gray-700">
 						<path d="M280,185.143V416H496V16H457.6ZM464,384H312V198.857L464,54.1Z"></path>
