--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			</div>
 		</div>
 		<div id="darkmode" class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row"id="darkmode" style="background-color:transparent;" >
-			<img id="darkmode" src="rendang3.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
+			<img id="darkmode" src="sejarah.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
 			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6"  style="background-color:transparent;" >
 				<span class="text-xs uppercase dark:text-gray-400">Rendang 🥩</span>
 				<h3 class="text-3xl font-bold">Sejarah Singkat dari Rendang</h3>
@@ -135,7 +135,7 @@
 			</div>
 		</div>
 		<div id="darkmode" class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row-reverse"id="darkmode"style="background-color:transparent;">
-			<img id="darkmode" src="rendang2.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
+			<img id="darkmode" src="tahun.jpg" alt="" class="h-80 dark:bg-gray-500 aspect-video">
 			<div id="darkmode" class="flex flex-col justify-center flex-1 p-6"  style="background-color:transparent;">
 				<span class="text-xs uppercase dark:text-gray-400">Rendang 🥩</span>
 				<h3 class="text-3xl font-bold">Sejak Kapan Masakan Rendang ada?</h3>
